--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,11 @@ bytes = "0.4"
 chrono = {version = "0.4.10", features = ["serde"] }
 env_logger = "0.6"
 futures = "0.1"
-uuid = { version = "0.5", features = ["serde", "v4"] }
+uuid = { version = "0.8.1", features = ["serde", "v4"] }
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
 
-diesel = { version = "^1.1.0", features = ["sqlite", "r2d2", "chrono"] }
+diesel = { version = "1.4.3", features = ["sqlite", "r2d2", "chrono"] }
 r2d2 = "0.8"
 dotenv = "0.10"
