--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "1.0.0"
+actix-web = "1.0.9"
+actix-files = "0.1.7"
 
 bytes = "0.4"
 chrono = {version = "0.4.10", features = ["serde"] }
