--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DATABASE_URL=test.db
-RUST_LOG="actix_web=error"
-SERVE_ADDR="172.16.206.134:8080"
+RUST_LOG="actix_web=info"
+SERVE_ADDR="0.0.0.0:8080"
